fixed the alignment of footer

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -15,6 +15,11 @@
     justify-content: space-between;
   }
 
+  @media screen and (max-width: $break-point-mobile) {
+    flex-direction: column;
+    align-items: center;
+  }
+
   .Logo {
     display: flex;
     align-items: center;
@@ -48,6 +53,12 @@
       margin-right: 0;
     }
 
+    .heading {
+      @media screen and (max-width: $break-point-mobile) {
+        text-align: center;
+      }
+    }
+
     .links {
       display: flex;
       flex-direction: column;
@@ -55,6 +66,13 @@
       font-size: 1.4rem;
       font-weight: 600;
       color: $neutral-100;
+
+      @media screen and (max-width: $break-point-mobile) {
+        align-items: center;
+        justify-content: center;
+        flex-direction: row;
+        flex-wrap: wrap;
+      }
     }
   }
 
